# swagger.json
@@ -1262,7 +1262,31 @@
     },
     "/api/autograder/submission": {
       "post": {
-        "operationId": "SubmitAssignment",
+        "operationId": "RetrieveAutograder",
+        "responses": {
+          "204": {
+            "description": "No content"
+          },
+          "401": {
+            "description": "Invalid GitHub OIDC token"
+          }
+        },
+        "security": [],
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ]
+      }
+    },
+    "/api/autograder/submission/feedback": {
+      "post": {
+        "operationId": "SubmitFeedback",
         "responses": {
           "200": {
             "description": "Ok",
